[tool.poetry]
name = "duplicate-files-finder"
version = "1.0.0"
description = "This CLI application is a tool for finding any type of duplicate files in one or more directories."
authors = ["Alimus Sifar <alimus.sifar@g.bracu.ac.bd>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
